MCKIN-11453  fixed the bottom nav overlap video. (#3387)

--- a/static_v2/scss/common/_animation.scss
+++ b/static_v2/scss/common/_animation.scss
@@ -262,6 +262,10 @@
         background-position: 0% 0%
     }
   }
+
+  @media screen and (max-width: 767px) {
+      z-index: 8;
+  }
 }
 
 // Progressive Donut loader
